--- a/final-project/index.html
+++ b/final-project/index.html
@@ -12,22 +12,22 @@
 <body>
     <header>
         <nav>
-            <!-- Add class to ul** -->
-            <ul>
-                <li><img src="images/logo.png" alt="Logo" id="logo" /></li>
-                <!-- add class fo active to the home** -->
-                <li><a href="#home">Home</a></li>
-                <li><a href="#aboutus">About us</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contactus">Contact us</a></li>
-                <li>
-                    <form action="search.html" method="GET">
-                        <input id="search" type="text" name="search" placeholder="Search">
-                        <!-- Add the button ưith the icon** -->
-                    </form>
-                </li>
-            </ul>
+            <div class="ul">
+                <ul>
+                    <li><img src="images/logo.png" alt="Logo" id="logo" /></li>
+                    <li><a href="#home" class="homepage">Home</a></li>
+                    <li><a href="#aboutus">About us</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#contactus">Contact us</a></li>
+                    <li>
+                        <form action="search.html" method="GET">
+                            <input id="search" type="text" name="search" placeholder="Search">
+                            <button type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <div id="home">
             <div class="banner">
@@ -40,8 +40,7 @@
                     molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu finibus
                     vitae, placerat a augue.
                 </p>
-                <!-- Add a class in the a tag to style it as a button** -->
-                <a href="#"> Connect with us</a>
+                <a href="#" class="connectus"> Connect with us</a>
 
             </div>
         </div>
@@ -49,153 +48,166 @@
 
     <main class="container">
         <section id="aboutus">
-            <!-- add a container div here** -->
-            <img src="images/about-us.jpg" alt="image about us" />
-            <div class="about">
-                <h2>About Us</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                    Donec sed dolor id quam eleifend vestibulum eu eu enim. Integer porttitor venenatis finibus. Fusce
-                    molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu finibus
-                    vitae, placerat a augue. Vestibulum scelerisque odio est, quis congue neque mattis non. Curabitur
-                    consectetur a mi eget laoreet.
-                </p>
+            <div class="aboutcontent">
+                <img src="images/about-us.jpg" alt="image about us" />
+                <div class="about">
+                    <h2>About Us</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat
+                        imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                        nec
+                        metus.
+                        Donec sed dolor id quam eleifend vestibulum eu eu enim. Integer porttitor venenatis finibus.
+                        Fusce
+                        molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu
+                        finibus
+                        vitae, placerat a augue. Vestibulum scelerisque odio est, quis congue neque mattis non.
+                        Curabitur
+                        consectetur a mi eget laoreet.
+                    </p>
+                </div>
             </div>
-            <!-- close the container div here** -->
         </section>
         <section id="services">
-            <!-- add a container div here** -->
-            <h2>Our Services</h2>
-            <div class="digital">
-                <img src="images/digital.jpg" alt="digital image" />
-                <h3>Digital Transformation</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                    Donec sed dolor id quam eleifend vestibulum eu eu enim
-                </p>
-                <a href="#"> Digital Plans</a>
-            </div>
-            <div class="marketing">
-                <img src="images/marketing.jpg" alt="marketing image" />
-                <h3>Marketing</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                    Donec sed dolor id quam eleifend vestibulum eu eu enim
-                </p>
-                <a href="#"> Marketing plans</a>
-            </div>
-            <div class="video">
-                <img src="images/video.jpg" alt="video production image" />
-                <h3>Video Production</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                    Donec sed dolor id quam eleifend vestibulum eu eu enim
-                </p>
-                <a href="#"> Video Plans</a>
-            </div>
-            <div class="web">
-                <img src="images/web.jpg" alt="web image" />
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                    Donec sed dolor id quam eleifend vestibulum eu eu enim
-                </p>
-                <a href="#"> Web Plans</a>
-            </div>
-            <div class="print">
-                <img src="images/print.jpg" alt="print image" />
-                <h3>Print</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                    Donec sed dolor id quam eleifend vestibulum eu eu enim
-                </p>
-                <a href="#"> Print Plans</a>
-                <!-- close a container div here** -->
+            <div class="servicecontent">
+                <h2>Our Services</h2>
+                <div class="digital">
+                    <img src="images/digital.jpg" alt="digital image" />
+                    <h3>Digital Transformation</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                        nec
+                        metus.
+                        Donec sed dolor id quam eleifend vestibulum eu eu enim
+                    </p>
+                    <a href="#"> Digital Plans</a>
+                </div>
+                <div class="marketing">
+                    <img src="images/marketing.jpg" alt="marketing image" />
+                    <h3>Marketing</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                        nec
+                        metus.
+                        Donec sed dolor id quam eleifend vestibulum eu eu enim
+                    </p>
+                    <a href="#"> Marketing plans</a>
+                </div>
+                <div class="video">
+                    <img src="images/video.jpg" alt="video production image" />
+                    <h3>Video Production</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                        nec
+                        metus.
+                        Donec sed dolor id quam eleifend vestibulum eu eu enim
+                    </p>
+                    <a href="#"> Video Plans</a>
+                </div>
+                <div class="web">
+                    <img src="images/web.jpg" alt="web image" />
+                    <h3>Web Development</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                        nec
+                        metus.
+                        Donec sed dolor id quam eleifend vestibulum eu eu enim
+                    </p>
+                    <a href="#"> Web Plans</a>
+                </div>
+                <div class="print">
+                    <img src="images/print.jpg" alt="print image" />
+                    <h3>Print</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                        nec
+                        metus.
+                        Donec sed dolor id quam eleifend vestibulum eu eu enim
+                    </p>
+                    <a href="#"> Print Plans</a>
+                </div>
         </section>
         <section id="vision">
-            <!-- add a container div here** -->
-            <h2>Our Vision</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec metus.
-            </p>
-            <a href="#">Learn more</a>
-            <!-- close a container div here** -->
+            <div class="visioncontent">
+                <h2>Our Vision</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
+                    metus.
+                </p>
+                <a href="#">Learn more</a>
+            </div>
         </section>
 
         <section id="team">
-            <!-- add a container div here** -->
-            <h2>Our Team</h2>
-            <img src="images/john.jpg" alt="john doe" class="johndoe" />
-            <div class="team1">
-                <h3>John Doe</h3>
-                <h4>CEO and Co-founder</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                </p>
+            <div class="teamcontent">
+                <h2>Our Team</h2>
+                <img src="images/john.jpg" alt="john doe" class="johndoe" />
+                <div class="team1">
+                    <h3>John Doe</h3>
+                    <h4>CEO and Co-founder</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                        nec
+                        metus.
+                    </p>
+                </div>
+                <img src="images/bob.jpg" alt="bob" class="bobrite" />
+                <div class="team2">
+                    <h3>Bob Rite</h3>
+                    <h4>CEO and Co-founder</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
+                        volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut
+                        nec
+                        metus.
+                    </p>
+                </div>
             </div>
-            <img src="images/bob.jpg" alt="bob" class="bobrite" />
-            <div class="team2">
-                <h3>Bob Rite</h3>
-                <h4>CEO and Co-founder</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
-                    volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
-                    metus.
-                </p>
-            </div>
-            <!-- close a container div here** -->
         </section>
 
         <section id="contactus">
-            <!-- add a container div here** -->
-            <h2>Contact us</h2>
-            <div class="message">
-                <h3>Send us a message</h3>
-                <form action="contact.html" method="GET">
-                    <div>
-                        <label for="fullname">Full name</label>
-                        <input id="fullname" type="text">
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input id="email" type="email">
-                    </div>
-                    <div>
-                        <label for="message">Your Message</label>
-                        <textarea id="message" rows="5"></textarea>
-                    </div>
-                    <button type="submit"> Send</button>
-                </form>
-            </div>
+            <div class="contact content">
+                <h2>Contact us</h2>
+                <div class="message">
+                    <h3>Send us a message</h3>
+                    <form action="contact.html" method="GET">
+                        <div>
+                            <label for="fullname">Full name</label>
+                            <input id="fullname" type="text">
+                        </div>
+                        <div>
+                            <label for="email">Email</label>
+                            <input id="email" type="email">
+                        </div>
+                        <div>
+                            <label for="message">Your Message</label>
+                            <textarea id="message" rows="5"></textarea>
+                        </div>
+                        <button type="submit"> Send</button>
+                    </form>
+                </div>
 
-            <div class="hours">
-                <h3>Hours of operation</h3>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Day</th>
-                            <th>Hours</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Monday-Friday</td>
-                            <td>9AM-6PM</td>
-                        </tr>
-                        <tr>
-                            <td>Saturday-Sunday</td>
-                            <td>Close</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+                <div class="hours">
+                    <h3>Hours of operation</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Day</th>
+                                <th>Hours</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Monday-Friday</td>
+                                <td>9AM-6PM</td>
+                            </tr>
+                            <tr>
+                                <td>Saturday-Sunday</td>
+                                <td>Close</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
 
             <div class="location">
@@ -204,7 +216,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8922.452357673641!2d-75.76203857659864!3d45.35062100220712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627395864745!5m2!1sen!2sca"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
-            <!-- close a container div here** -->
+            </div>
         </section>
     </main>
     <footer class="footer">
