--- a/final-project/index.html
+++ b/final-project/index.html
@@ -16,7 +16,11 @@
         <nav>
             <div class="ul">
                 <ul>
-                    <li><img src="images/logo.png" alt="Logo" id="logo" /></li>
+                    <li>
+                        <a href="index.html">
+                            <img src="images/logo.png" alt="Logo" id="logo" />
+                        </a>
+                    </li>
                     <li><a href="#home" class="homepage">Home</a></li>
                     <li><a href="#aboutus">About us</a></li>
                     <li><a href="#services">Services</a></li>
