--- a/final-project/index.html
+++ b/final-project/index.html
@@ -31,7 +31,7 @@
                     <li><a href="#contactus">Contact us</a></li>
                     <li>
                         <form action="search.html" method="GET">
-                            <input id="search" type="text" name="search" placeholder="Search">
+                            <input id="search" type="text" name="search" placeholder="Search" class="searchbar">
                             <button type="submit" ><i class="im im-magnifier"></i></button>
                         </form>
                     </li>
