--- a/final-project/index.html
+++ b/final-project/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <tittle> Three Stars Media</tittle>
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css
     ">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -49,8 +48,7 @@
                     molestie tincidunt diam eget ultrices. Sed ut fringilla quam. Sed nisl ipsum, convallis eu finibus
                     vitae, placerat a augue.
                 </p>
-                <a href="#" class="connectus"> Connect with us</a>
-
+                <a href="#" class="connectus"> Connect with us <i class="im im-play"></i></a>
             </div>
         </div>
     </header>
