style our service 1

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -88,7 +88,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Digital Plans</a>
+                    <a href="#"> Digital Plans<i class="im im-play"></i></a>
                 </div>
                 <div class="marketing">
                     <img src="images/marketing.jpg" alt="marketing image" />
@@ -99,7 +99,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Marketing plans</a>
+                    <a href="#"> Marketing plans<i class="im im-play"></i></a>
                 </div>
                 <div class="video">
                     <img src="images/video.jpg" alt="video production image" />
@@ -110,7 +110,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Video Plans</a>
+                    <a href="#"> Video Plans<i class="im im-play"></i></a>
                 </div>
                 <div class="web">
                     <img src="images/web.jpg" alt="web image" />
@@ -121,7 +121,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Web Plans</a>
+                    <a href="#"> Web Plans<i class="im im-play"></i></a>
                 </div>
                 <div class="print">
                     <img src="images/print.jpg" alt="print image" />
@@ -132,7 +132,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Print Plans</a>
+                    <a href="#"> Print Plans<i class="im im-play"></i></a>
                 </div>
         </section>
         <section id="vision">
