--- a/final-project/index.html
+++ b/final-project/index.html
@@ -142,15 +142,15 @@
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
                     metus.
                 </p>
-                <a href="#">Learn more</a>
+                <a href="#">Learn more<i class="im im-play"></i></a>
             </div>
         </section>
 
         <section id="team">
             <div class="teamcontent">
                 <h2>Our Team</h2>
-                <img src="images/john.jpg" alt="john doe" class="johndoe" />
                 <div class="team1">
+                    <img src="images/john.jpg" alt="john doe" class="johndoe" />
                     <h3>John Doe</h3>
                     <h4>CEO and Co-founder</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
@@ -159,8 +159,8 @@
                         metus.
                     </p>
                 </div>
-                <img src="images/bob.jpg" alt="bob" class="bobrite" />
                 <div class="team2">
+                    <img src="images/bob.jpg" alt="bob" class="bobrite" />
                     <h3>Bob Rite</h3>
                     <h4>CEO and Co-founder</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt augue nec erat imperdiet
@@ -173,7 +173,7 @@
         </section>
 
         <section id="contactus">
-            <div class="contact content">
+            <div class="contactcontent">
                 <h2>Contact us</h2>
                 <div class="message">
                     <h3>Send us a message</h3>
