Try to fix the play button

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -102,7 +102,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Marketing plans<i class="im im-play"></i></a>
+                    <a href="#"> Marketing plans<i class="im im-play" class="playbutton"></i></a>
                 </div>
                 <div class="video">
                     <img src="images/video.jpg" alt="video production image" />
@@ -113,7 +113,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Video Plans<i class="im im-play"></i></a>
+                    <a href="#"> Video Plans<i class="im im-play" class="playbutton"></i></a>
                 </div>
                 <div class="web">
                     <img src="images/web.jpg" alt="web image" />
@@ -124,7 +124,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Web Plans<i class="im im-play"></i></a>
+                    <a href="#"> Web Plans<i class="im im-play" class="playbutton"></i></a>
                 </div>
                 <div class="print">
                     <img src="images/print.jpg" alt="print image" />
@@ -135,7 +135,7 @@
                         metus.
                         Donec sed dolor id quam eleifend vestibulum eu eu enim
                     </p>
-                    <a href="#"> Print Plans<i class="im im-play"></i></a>
+                    <a href="#"> Print Plans<i class="im im-play" class="playbutton"></i></a>
                 </div>
         </section>
         <section id="vision">
@@ -145,7 +145,7 @@
                     volutpat. In aliquet egestas dolor in rhoncus. Proin vel augue a magna efficitur tincidunt ut nec
                     metus.
                 </p>
-                <a href="#">Learn more<i class="im im-play"></i></a>
+                <a href="#">Learn more<i class="im im-play" class="playbutton"></i></a>
             </div>
         </section>
 
